fix: heading alignment not central

--- a/src/spectacle-output-terminal.css
+++ b/src/spectacle-output-terminal.css
@@ -9,6 +9,7 @@
   border-radius: 5px 5px 0 0;
   font-size: 1.2rem;
   padding: 8px 0;
+  text-align: center;
   position: relative;
 }
 
